# autonomous

./: .gitignore  .gitmodules  README.md  automated.rviz
.github/workflows/: ci.yaml
catkin_ws/devel/: .catkin
catkin_ws/devel/include/sdp_pkg/: Control_msg.h
catkin_ws/devel/lib/pkgconfig/: sdp_pkg.pc
catkin_ws/devel/lib/python3/dist-packages/sdp_pkg/msg/: _Control_msg.py
catkin_ws/devel/share/common-lisp/ros/sdp_pkg/msg/: Control_msg.lisp  _package.lisp  _package_Control_msg.lisp  sdp_pkg-msg.asd
catkin_ws/devel/share/gennodejs/ros/sdp_pkg/msg/: Control_msg.js
catkin_ws/devel/share/roseus/ros/sdp_pkg/: manifest.l
catkin_ws/devel/share/roseus/ros/sdp_pkg/msg/: Control_msg.l
catkin_ws/devel/share/sdp_pkg/cmake/: sdp_pkg-msg-paths.cmake  sdp_pkgConfig.cmake
catkin_ws/src/sdp_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/sdp_pkg/launch/: spawn.launch
catkin_ws/src/sdp_pkg/msg/: Control_msg.msg
catkin_ws/src/sdp_pkg/src/: control.py
config/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf_global.yaml  ekf_local.yaml  ekf_localization.yaml  local_costmap_params.yaml
launch/: eval.launch  full.launch  keyboard.launch  localization.launch  navigation.launch  robot.launch  simulation.launch  spawn.launch  start_map_server.launch  start_navsat.launch  vision.launch
rviz/: navigation.rviz  odom.rviz
src/automated_msgs/: CMakeLists.txt  package.xml
src/automated_msgs/msg/: NetworkStatus.msg  NetworkStatusStamped.msg  RobotState.msg  RobotStateStamped.msg
src/basic_controller/: CMakeLists.txt  package.xml
src/basic_controller/controllers/control/: control.py
src/basic_controller/launch/: spawn.launch  webots.launch
src/basic_controller/src/: control.py  path_detection.py  webots_launcher.py
src/basic_controller/worlds/: .test_world.wbproj  test_world.wbt
src/controllers/: CMakeLists.txt  package.xml
src/controllers/include/controllers/: KeyboardController.hpp
src/controllers/scripts/: KeyboardController.py
src/controllers/src/: KeyboardController.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Control.msg  ControlStamped.msg
src/localization/: CMakeLists.txt  package.xml
src/localization/QA/: QA_Collector.py
src/localization/config/: ekf_global.yaml  ekf_local.yaml  navsat.yaml
src/localization/config/ground_truth/: ekf_global.yaml  ekf_local.yaml
src/localization/config/noise/: ekf_global.yaml  ekf_local.yaml
src/localization/scripts/: GPS_gt.txt  QA_Plotter.py  data_collector.py  data_log.py  data_viz.py  eval.py
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  curved_path.yaml  local_costmap_params.yaml  square.yaml
src/path_detection/: CMakeLists.txt  package.xml
src/portal_connection/: CMakeLists.txt  package.xml
src/portal_connection/scripts/: .portal.py.swp  portal.py
src/robot_setup_tf/: CMakeLists.txt  package.xml
src/robot_setup_tf/src/: tf_broadcaster.py  tf_listener.py
src/state-machine/: CMakeLists.txt  package.xml
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/scripts/: state_machine.py
src/vision/: CMakeLists.txt  package.xml
src/vision/config/: darknet_ros.yaml
src/vision/scripts/: depth_estimation.py
worlds/: .4-way.wbproj  .curvedpath.wbproj  .meadows_with_pedestrian.wbproj  .single_lane_meadows.wbproj  .straightline.wbproj  4-way.wbt  4-way.yaml  meadows_map.yaml  single_lane_meadows.wbt  square.yaml  world.yaml
