<?xml version="1.0"?>
<package format="2">
  <name>automated_msgs</name>
  <version>0.0.0</version>
  <description>The automated_msgs package</description>
  <license>MIT</license>
  <maintainer email="siliconlad@protonmail.com">Angus Stewart</maintainer>
  <author email="siliconlad@protonmail.com">Angus Stewart</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

</package>
