<?xml version="1.0"?>
<package format="2">
  <name>basic_controller</name>
  <version>0.0.0</version>
  <description>The basic_controller package</description>
  <maintainer email='s1819881@ed.ac.uk'>enzo-inc</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>


</package>
