<?xml version="1.0"?>
<package format="2">
  <name>basic_controller</name>
  <version>0.0.0</version>
  <description>The basic_controller package</description>
  <maintainer email='s1819881@ed.ac.uk'>enzo-inc</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>python-matplotlib</build_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>custom_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>python-matplotlib</build_export_depend>

</package>
