<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>
  <maintainer email="vincenzo.incutti@gmail.com">Vincenzo Incutti</maintainer>
  <license>MIT</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>

  <build_depend>map_server</build_depend>
  <build_export_depend>map_server</build_export_depend>
  <exec_depend>map_server</exec_depend>

</package>
